--- a/app/src/main/res/layout/activity_configuracion_unica.xml
+++ b/app/src/main/res/layout/activity_configuracion_unica.xml
@@ -129,7 +129,7 @@
         android:maxLength="70"
         android:singleLine="true"
         android:text="/CCURE/"
-        android:textColor="@color/ksw_md_solid_shadow"
+        android:textColor="@color/primary"
         android:textSize="20sp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -178,7 +178,7 @@
         android:textColor="@android:color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/imgLogo"
-        app:layout_constraintHorizontal_bias="0.463"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
