--- a/app/src/main/res/layout/fragment_checadas.xml
+++ b/app/src/main/res/layout/fragment_checadas.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/imgFondoPuerta"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="70dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -35,7 +35,9 @@
     <ImageView
         android:id="@+id/imgFondoConexion"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgFondoPuerta"
@@ -67,31 +69,33 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgFondoConexion"
-        app:srcCompat="@drawable/fondo_camino" />
+        app:srcCompat="@drawable/fondo_camino"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintVertical_bias="0.0" />
 
     <com.kyleduo.switchbutton.SwitchButton
         android:id="@+id/sbTipoChecada"
         style="@style/AppTheme"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:textColor="@color/icons2"
         android:textSize="35dp"
         app:kswAnimationDuration="300"
-        app:kswBackColor="@color/primary"
+        app:kswBackColor="@color/entrada"
         app:kswTextOff="Salida "
         app:kswTextOn="Entrada"
         app:kswThumbColor="@color/icons2"
         app:kswThumbHeight="50dp"
         app:kswThumbMargin="@dimen/ksw_md_thumb_shadow_inset_top"
         app:kswThumbWidth="50dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/imgFondoConexion"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgFondoConexion" />
 
     <TextView
         android:id="@+id/txtNoEmpleado"
@@ -101,7 +105,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="8dp"
         android:text="No. de Tarjeta"
         android:textColor="@android:color/white"
         android:textSize="27sp"
@@ -115,16 +119,17 @@
 
     <EditText
         android:id="@+id/edtNoEmpleado"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
         android:background="@drawable/borde"
         android:ems="10"
         android:gravity="center_horizontal"
         android:maxLength="5"
+        android:paddingTop="16dp"
         android:singleLine="true"
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textSize="22sp"
+        android:textSize="25sp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -136,56 +141,60 @@
         android:id="@+id/edtNoTarjeta"
         android:layout_width="300dp"
         android:layout_height="60dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:background="@drawable/borde"
         android:ems="10"
         android:gravity="center_horizontal"
         android:inputType="none"
         android:maxLength="5"
+        android:paddingTop="8dp"
         android:singleLine="true"
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textSize="22sp"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNoEmpleado"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/txtNoEmpleado" />
 
     <TextView
         android:id="@+id/txtTipoChecada"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="225dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
         android:text="@string/olvide_mi_tarjeta"
-        android:textColor="@android:color/white"
+        android:textColor="@color/fechaHora"
         android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtNoTarjeta" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/btnBuscarEmpleado"
-        android:layout_width="170dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="40dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/boton_circular_rojo"
         android:text="Buscar"
         android:textColor="@color/icons2"
         android:textSize="23sp"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintLeft_toRightOf="@+id/btnNueve"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnTres" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -198,46 +207,42 @@
 
     <TextView
         android:id="@+id/txtNombre"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginStart="32dp"
         android:text="Dario Anastacio Verón"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         app:layout_constraintLeft_toRightOf="@+id/imgFotoPerfil"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline" />
+        app:layout_constraintTop_toTopOf="@+id/imgFotoPerfil"
+        android:layout_marginTop="8dp" />
 
     <TextView
         android:id="@+id/txtPuestoEmpresa"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:text="Guardia-Peña Colorada"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         app:layout_constraintLeft_toRightOf="@+id/imgFotoPerfil"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNombre" />
 
     <ImageView
         android:id="@+id/imgFotoPerfil"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="50dp"
         android:src="@drawable/ic_card"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/imgFondoAcceso"
-        android:layout_marginStart="50dp" />
+        android:layout_marginStart="50dp"
+        app:layout_constraintTop_toTopOf="@+id/guideline"
+        android:layout_marginTop="8dp" />
 
     <ImageView
         android:id="@+id/imgFondoAcceso"
@@ -270,145 +275,169 @@
         app:layout_constraintRight_toRightOf="@+id/imgFondoAcceso"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imgFondoAcceso" />
+
     <Button
         android:id="@+id/btnCero"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/boton_teclado"
         android:text="0"
+        android:textColor="@android:color/white"
+        android:textSize="25sp"
         android:visibility="gone"
-        app:layout_constraintRight_toLeftOf="@+id/btnBorrar"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintLeft_toRightOf="@+id/btnSiete"
+        app:layout_constraintRight_toLeftOf="@+id/btnNueve"
         app:layout_constraintTop_toBottomOf="@+id/btnSiete" />
 
     <Button
         android:id="@+id/btnUno"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/boton_teclado"
         android:text="1"
         android:visibility="gone"
+        android:textColor="@android:color/white"
+        android:textSize="25sp"
         app:layout_constraintRight_toLeftOf="@+id/btnDos"
-        app:layout_constraintTop_toBottomOf="@+id/edtNoEmpleado" />
+        app:layout_constraintTop_toBottomOf="@+id/txtTipoChecada" />
 
     <Button
         android:id="@+id/btnDos"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/boton_teclado"
         android:text="2"
+        android:textColor="@android:color/white"
+        android:textSize="25sp"
         android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtNoEmpleado" />
+        app:layout_constraintTop_toBottomOf="@+id/txtTipoChecada" />
 
     <Button
         android:id="@+id/btnTres"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/boton_teclado"
         android:text="3"
+        android:textColor="@android:color/white"
+        android:textSize="25sp"
         android:visibility="gone"
-        app:layout_constraintLeft_toRightOf="@+id/btnDos"
-        app:layout_constraintTop_toBottomOf="@+id/edtNoEmpleado" />
+        app:layout_constraintTop_toBottomOf="@+id/txtTipoChecada"
+        app:layout_constraintLeft_toRightOf="@+id/btnDos" />
 
     <Button
         android:id="@+id/btnCuatro"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/boton_teclado"
         android:text="4"
         android:visibility="gone"
+        android:textColor="@android:color/white"
+        android:textSize="25sp"
         app:layout_constraintRight_toLeftOf="@+id/btnCinco"
         app:layout_constraintTop_toBottomOf="@+id/btnUno" />
 
     <Button
         android:id="@+id/btnCinco"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/boton_teclado"
         android:text="5"
         android:visibility="gone"
+        android:textColor="@android:color/white"
+        android:textSize="25sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnDos" />
 
     <Button
         android:id="@+id/btnSeis"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="0dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/boton_teclado"
         android:text="6"
         android:visibility="gone"
+        android:textColor="@android:color/white"
+        android:textSize="25sp"
         app:layout_constraintLeft_toRightOf="@+id/btnCinco"
         app:layout_constraintTop_toBottomOf="@+id/btnTres" />
 
     <Button
         android:id="@+id/btnSiete"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/boton_teclado"
         android:text="7"
         android:visibility="gone"
+        android:textColor="@android:color/white"
+        android:textSize="25sp"
         app:layout_constraintRight_toLeftOf="@+id/btnOcho"
         app:layout_constraintTop_toBottomOf="@+id/btnCuatro" />
 
     <Button
         android:id="@+id/btnOcho"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/boton_teclado"
         android:text="8"
         android:visibility="gone"
+        android:textColor="@android:color/white"
+        android:textSize="25sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCinco" />
 
     <Button
         android:id="@+id/btnNueve"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="0dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/boton_teclado"
         android:text="9"
+        android:textColor="@android:color/white"
+        android:textSize="25sp"
         android:visibility="gone"
         app:layout_constraintLeft_toRightOf="@+id/btnOcho"
         app:layout_constraintTop_toBottomOf="@+id/btnSeis" />
 
     <Button
         android:id="@+id/btnBorrar"
-        style="@style/botonTeclado"
-        android:layout_width="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
-        android:text="Borrar"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/ic_backspace"
+        android:backgroundTint="@color/fechaHora"
         android:visibility="gone"
-        app:layout_constraintLeft_toLeftOf="@+id/btnOcho"
-        app:layout_constraintRight_toRightOf="@+id/btnNueve"
-        app:layout_constraintTop_toBottomOf="@+id/btnOcho"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintBottom_toBottomOf="@+id/edtNoEmpleado"
+        app:layout_constraintRight_toRightOf="@+id/edtNoEmpleado"
+        app:layout_constraintTop_toBottomOf="@+id/edtNoTarjeta" />
 
 
 </android.support.constraint.ConstraintLayout>
