Se agregaron mas caracteres a la busqueda de tarjeta y numero de personal, se quito el guardar el personal cuando no se encuentra por tarjeta, se agrego un trim al guardar los usuarios en su tipo de usuario

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,6 +106,7 @@
         android:background="@drawable/borde"
         android:ems="10"
         android:inputType="number"
+        android:maxLength="10"
         android:singleLine="true"
         android:textAlignment="center"
         app:layout_constraintLeft_toLeftOf="parent"
